# rin

./: .gitignore  Cargo.toml  Justfile  README.md  taplo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/graphql/: schema.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/ui/: forms.rs  mod.rs  render.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/db/: mod.rs
crates/core/src/indexer/: decoder.rs  fetcher.rs  mod.rs
crates/core/src/pipeline/: config.rs  metrics.rs
crates/core/tests/: integration_tests.rs
src/: main.rs
src/db/: mod.rs
src/indexer/: mod.rs
src/ui/: mod.rs  state.rs
