[package]
name = "rin"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.4", features = ["full"] }
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
tokio = { version = "1.52.1", features = ["full"] }
tui-input = "0.15.3"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
