[workspace]
members  = ["crates/core", "apps/cli", "apps/api"]
resolver = "2"

[workspace.dependencies]
alloy              = { version = "2.0.4", features = ["full"] }
anyhow             = "1.0.102"
crossterm          = "0.29.0"
ratatui            = "0.30.0"
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.138"
surrealdb          = { version = "3.0.5", features = ["kv-surrealkv", "kv-mem"] }
tokio              = { version = "1.52.1", features = ["full"] }
tui-input          = "0.15.3"
async-graphql      = "7.0.15"
async-graphql-axum = "7.0.15"
axum               = "0.8.1"
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
